add view for iphone 5

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             padding: 0;
         }
 
+        
+
         @media only screen and (min-width: 767px) {
             body {
                 background-image: url('./images/bg_1024.png');
@@ -326,6 +328,83 @@
             }
         }
 
+        @media only screen and (max-width: 321px) {
+            body {
+                background-image: url('./images/bg_potrait.png');
+                background-position-y: 40%;
+                background-size: cover;
+            }
+
+            .content {
+                text-transform: uppercase;
+                margin-top: 36%;
+                text-align: center;
+            }
+
+            #WE_STILL_BAKING_OUR_NEW_SITE {
+                font-family: 'PoppinsMedium', sans-serif;
+                font-weight: bold;
+                font-size: 20px;
+                line-height: 20px;
+            }
+
+            #COMING_SOON {
+                margin-top: 20px;
+                font-family: 'zonapro';
+                font-size: 48px;
+                line-height: 40px;
+            }
+
+            #WITH_GREAT_TASTE_COMES_GREAT_r {
+                font-family: 'PoppinsRegular';
+                font-size: 9px;
+                margin-top: 20px;
+            }
+
+            #STAY_TUNED_ {
+                font-family: 'zona-pro', sans-serif;
+                font-weight: bold;
+                font-size: 18px;
+                margin-top: 18px
+            }
+
+            #block-logo {
+                position: absolute;
+                right: 10px;
+                top: 10px;
+                width: 60px;
+                height: 60px;
+            }
+
+            #block-logo img {
+                width: 60px;
+            }
+
+            #block-social {
+                position: inherit;
+                margin-top: 30px;
+            }
+
+            #block-social ul {
+                text-align: center;
+                padding: 0;
+                margin: 0;
+            }
+
+            #block-social li {
+                display: inline-block;                
+            }
+            #block-social li img {
+                height: 40px;
+                width: 40px;
+            }
+            #block-social li:first {
+                display: inline-block;
+                margin-left: 0;
+            }
+
+        }
+
         @media only screen and (min-width: 1025px) {
             body {
                 background-image: url('./images/bg_wide.png');
@@ -463,6 +542,8 @@
                 display: inline-block;
             }
         }
+
+        
     </style>
 </head>
 
